def mainClassName = "pro.gravit.launchermodules.mirrorhelper.MirrorHelperModule"

sourceCompatibility = '21'
targetCompatibility = '21'

jar {
    manifest.attributes("Module-Main-Class": mainClassName)
}

dependencies {
}